added all features requested in the challenge

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -53,7 +53,19 @@
       </div>
       <div class="col-lg offset-lg-1">
         <div class="form-group">
-          <%= f.text_field :email, class: "form-control", placeholder: "hello@company.com"%>
+          <%= f.text_field :email, class: "form-control", placeholder: "hello@getmainstreet.com", title: "Email must end with @getmainstreet.com" %>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="row my-lg-3">
+      <div class="col-lg-3">
+        <label><strong>Color</strong><br><small class="text-muted">Shown in Company's detail page</small></label>
+      </div>
+      <div class="col-lg offset-lg-1">
+        <div class="form-group">
+          <%= f.color_field :color, value: @company.background_color, class: "color-input"%>
         </div>
       </div>
     </div>
