--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,18 +1,25 @@
+<style type="text/css">
+  .brand_color {
+    background-color: <%=  @company.background_color %>
+  }
+</style>
+
 <div class="container py-5">
   <h3>Company</h3>
   <div class="row">
     <div class="col">
       <%= link_to "< Companies", companies_path %>
     </div>
-    <div class="col text-right">
-      <%= link_to "Edit", edit_company_path %>
+    <div class="col text-right mb-sm-2">
+      <%= link_to "Edit", edit_company_path , class: 'btn btn-info' %>
+      <%= link_to 'Delete', @company, method: :delete, data: { confirm: "Do you want to delete #{@company.name}" }, class: 'btn btn-danger' , id: 'delete_company'  %>
     </div>
   </div>
-  <div class="bg-success">
+  <div class="brand_color ">
     <div class="container p-5 text-white">
       <h1><%= @company.name %></h1>
-      <h3><mark>City, State</mark></h3>
-      <pre><mark>☝️ This is what needs to be udpated. Examples: Atlanta, GA or Nashvile, TN</mark></pre>
+      <h3><mark><%= @company.display_location %></mark></h3>
+      
     </div>
   </div>
 
@@ -36,7 +43,7 @@
     </div>
   </div>
 
-  <div class="bg-success text-white text-center py-3">
+  <div class="brand_color text-white text-center py-3">
     <p class="lead"><%= @company.phone %> — <%= @company.email %></p>
   </div>
 </div>
